--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -406,7 +406,7 @@ ul{list-style:none}
 	font-size: 112%;
 	font-weight: bold;
 }
-#avizHead {
+.avizHead {
 	font-family:Arial;
 	background-color:#ededed;
 	padding:10px;
@@ -415,7 +415,7 @@ ul{list-style:none}
 	line-height:14px;
 	border-bottom:solid 2px #dedede;
 	margin-bottom:15px;
-	height: 50px;
+	min-height: 55px;
 }
 .connectedsortable {
 	padding:5px;
