--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -594,7 +594,7 @@ ul {
   font-size: 10px;
   line-height: 14px;
   border-bottom: solid 2px #dedede;
-  margin-bottom: 15px;
+  margin-top: 15px;
   min-height: 55px;
 }
 
